[package]
name = "bge"
description = "Rust interface for BGE Small English Embedding Library"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/pekc83/bge"
readme = "README.md"
categories = ["text-processing"]
keywords = ["sentence-similarity", "text-embedding", "bert", "transformers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { version = "2.0.0-rc.0", default-features = false, features = ["ndarray"] }
tokenizers = { version = "0.15.2", features = ["http"] }
anyhow = "1.0.81"
ndarray = "0.15.6"
thiserror = "1.0.58"

[dev-dependencies]
ort = { version = "2.0.0-rc.0", default-features = false, features = ["download-binaries"] }
